--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: 1.2 - Writing Some PHP (Starter)
-Author: Xhuljano Koçia
-Author URI: https://github.com/XhuljanoKocia
-Description: Second amazing theme
+Theme Name: 1.4 - PHP Basics (Starter)
+Author: Zac Gordon
+Author URI: http://zacgordon.com
+Description: Demo site for Zac Gordon's WordPress Development Course.
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
