--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: 1.8 - The Loop (Starter)
+Theme Name: 1.10 - Template Tags (Starter)
 Author: Zac Gordon
 Author URI: http://zacgordon.com
 Description: Demo site for Zac Gordon's WordPress Development Course.
