--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: 1.12 - Conditional Tags (Starter)
+Theme Name: 1.14 - WordPress Hooks (Completed)
 Author: Zac Gordon
 Author URI: http://zacgordon.com
 Description: Demo site for Zac Gordon's WordPress Development Course.
@@ -16,8 +16,7 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6,
-p.sitename {
+h1, h2, h3, h4, h5, h6 {
   font-family: "Varela Round", sans-serif;
 }
 
@@ -44,15 +43,24 @@ pre {
   text-align: center;
 }
 
-#masthead p.sitename {
-  font-size: 1.8rem;
-  font-weight: bold;
-}
-
 #content {
   background: #efefef;
   margin: 20px auto;
   padding: 20px;
   width: 80%;
   border-radius: 5px;
+}
+
+.byline {
+  color: #777;
+  font-size: .8rem;
+}
+
+.byline a {
+  color: #777;
+  text-decoration: underline;
+}
+
+.byline a:hover {
+  color: #564A71;
 }
